plugin/src/test/resources/annotator/perl/identifierInspection.code

package <error descr="Non-ASCII symbols in identifier: Foo::Bаar.">Foo::Bаar</error>;
sub <error descr="Non-ASCII symbols in identifier: someеsub.">someеsub</error>{}
sub <error descr="Non-ASCII symbols in identifier: someеohtersub.">someеohtersub</error>;
my ($<error descr="Non-ASCII symbols in identifier: vaаr.">vaаr</error>, @<error descr="Non-ASCII symbols in identifier: vaаr.">vaаr</error>, %<error descr="Non-ASCII symbols in identifier: vaаr.">vaаr</error>);
<error descr="Non-ASCII symbols in identifier: soоmesub.">soоmesub</error>();
<error descr="Non-ASCII symbols in identifier: Foo::Bаar.">Foo::Bаar</error>-><error descr="Non-ASCII symbols in identifier: someеsub.">someеsub</error>();
has <error descr="Non-ASCII symbols in identifier: sometаhing.">sometаhing</error> => is => 'rw';
use Exception::Class '<error descr="Non-ASCII symbols in identifier: SomeExceеption.">SomeExceеption</error>';